--- a/client/styles/style.scss
+++ b/client/styles/style.scss
@@ -90,9 +90,23 @@ body {
   padding-bottom: 1rem;
 }
 
+.chart-container {
+  position: relative;
+  height: 500px;
+}
+
+.chart-reset {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+}
+
 .chart-description {
   font-size: 24px;
   padding-top: 1rem;
+  padding-bottom: 2rem;
 }
 
 .footer {
