feat: add daily increase to unique addresses chart

--- a/client/styles/style.scss
+++ b/client/styles/style.scss
@@ -116,6 +116,16 @@ body {
   padding-bottom: 2rem;
 }
 
+.tooltip {
+  padding: 0.25rem;
+}
+.tooltip-date {
+  font-size: 14px;
+}
+.tooltip-text {
+  margin-top: 0.25rem;
+}
+
 .footer {
   margin-top: 4rem;
   padding-top: 2rem;
